RESOLVED FIXED134492
AX: HTML indeterminate IDL attribute not mapped to checkbox value=2
https://bugs.webkit.org/show_bug.cgi?id=134492
Summary AX: HTML indeterminate IDL attribute not mapped to checkbox value=2
Steve Faulkner
Reported 2014-07-01 09:02:02 PDT
The HTML spec[1] requires that UAs expose the platform equivalent of the ARIA aria-checked=mixed when the indeterminate IDL attribute is true. "input element with a type attribute in the Checkbox state = aria-checked state set to "mixed" if the element's indeterminate IDL attribute is true, or "true" if the element's checkedness is true, or "false" otherwise" [1]http://www.w3.org/html/wg/drafts/html/master/dom.html#sec-strong-native-semantics The platform equivalent for Mac is AXValue: 2 http://www.w3.org/TR/wai-aria-implementation/#mapping_state-property_table test file http://stevefaulkner.github.io/html-mapping-tests/browser-tests/checkbox-states.html
Attachments
patch (6.56 KB, patch)
2014-07-01 11:50 PDT, chris fleizach
no flags
Radar WebKit Bug Importer
Comment 1 2014-07-01 09:02:18 PDT
chris fleizach
Comment 2 2014-07-01 11:50:52 PDT
Andreas Kling
Comment 3 2014-07-01 12:43:58 PDT
Comment on attachment 234179 [details] patch r=me
Steve Faulkner
Comment 4 2014-07-01 12:44:46 PDT
(In reply to comment #2) > Created an attachment (id=234179) [details] > patch thanks Chris!
WebKit Commit Bot
Comment 5 2014-07-01 13:30:16 PDT
Comment on attachment 234179 [details] patch Clearing flags on attachment: 234179 Committed r170661: <http://trac.webkit.org/changeset/170661>
WebKit Commit Bot
Comment 6 2014-07-01 13:30:20 PDT
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.